--- a/tareas/04/Tarea_4.ipynb
+++ b/tareas/04/Tarea_4.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# **Tarea 4 - CC6205 Natural Language Processing 📚**\n",
     "\n",
-    "**Integrantes:**\n",
+    "**Integrantes:** Nicolás Lemuñir y Matías Seda\n",
     "\n",
     "**Fecha límite de entrega 📆:** Martes 07 de junio.\n",
     "\n",
@@ -155,7 +155,7 @@
     "\n",
     "**Respuesta:** \n",
     "\n",
-    "`Escriba su respuesta aquí`\n",
+    "Reemplazar las palabras poco frecuentes (palabras que ocurren, por ejemplo, menos de 5 veces) por ciertas categorías permite manejar el problema. Por ejemplo, supóngase que se tiene un texto donde aparecen distintos años. Dichos años ocurren infrecuentes y tiene el formato *XXXX* (por ejemplo: 1969, 1984 y 1991). Los años mencionados pueden entrar a una categoría *Four digit year* y manejar el problema de las palabras infrecuentes.\n",
     "\n",
     "#### 2.4. ¿Qué le permite a los CRF realizar decisiones globales? ¿Qué diferencia con respecto a los MEMMs permite lograr esto? ¿Por qué los HMMs tampoco son capaces de tomar decisiones globales? (0.1 pts)\n",
     "\n",
@@ -174,7 +174,7 @@
     "Nótese que el denominador de la expresión asociada al modelo MEMM es local (la suma presente solo considera una etiquetas *anteriror* a la etiqueta acutal). En cambio, el denominador de la expresión asociada al modelo CRF es global (la suma presente considera todas las posibles sequencias de etiquetas $S_{m}$). Dicha diferencia es la que permite al modelo CRF tomar decisiones globales.\n",
     "\n",
     "\n",
-    "Los modelos HMMs no son capaces de tomar decisiones globales ya que realizan un supuesto *markoviano* de segundo orden.\n",
+    "Los modelos HMMs no son capaces de tomar decisiones globales ya que realizan un supuesto *markoviano* de segundo orden y, por ende, la etiqueta *actual* solo depende de dos etiquetas anteriores (y no de todas las etiquetas anteriores).\n",
     "#### 2.5 Dado una secuencia de $x_1, ..., x_m$ ¿Cuántas posibles secuencias de etiquetas se pueden generar para un conjunto de etiquetas $S$ con $|S|=k$ ? ¿Analizarlas todas sería computacionalmente tratable? (0.1 pts)\n",
     "\n",
     "**Respuesta:**\n",
@@ -354,7 +354,9 @@
    "source": [
     "**Respuesta**\n",
     "\n",
-    "`Escriba su respuesta aquí`"
+    "En términos generales, ambos modelos aprenden representaciones específicas para la tarea objetivo *pasando* el input por las capas de su red, generando un ouput y ajustando los parámetros para *minimizar* una función pérdida. Más en particular, una CNN aprende representaciones específicas para la tarea objetivo mediante capas con filtro de convolusión que permiten encontrar *patrones* locales. Por el otro, una RNN aprende representaciones específicas para la tarea objetivo mediante capas con *estados recursivos* que permiten *almacenar* información global.\n",
+    "\n",
+    "La gran diferencia entre la forma en que las RNN y CNN aprenden en comparación a modelos que usan features diseñadas manualmente es que las RNN y CNN aprenden de forma *autónoma* los features óptimos para la tarea objetivo. En cambio, un modelo que usa features diseñadas manualmente necesita un *experto* que diseñe las features óptimas."
    ]
   },
   {
@@ -595,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {
     "id": "TjSZkBsk1H4f"
    },
@@ -605,9 +607,19 @@
      "output_type": "stream",
      "text": [
       "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
-      "Collecting torch==1.8.0+cu111\n",
-      "  Downloading https://download.pytorch.org/whl/cu111/torch-1.8.0%2Bcu111-cp38-cp38-linux_x86_64.whl (1982.2 MB)\n",
-      "\u001b[K     |██████████████████████████████  | 1855.4 MB 8.4 MB/s eta 0:00:168  |▌                               | 33.0 MB 6.5 MB/s eta 0:05:02     |█▋                              | 99.9 MB 3.7 MB/s eta 0:08:23     |██▎                             | 140.4 MB 1.1 MB/s eta 0:28:06     |██▉                             | 174.9 MB 6.1 MB/s eta 0:04:57     |███▎                            | 203.4 MB 6.9 MB/s eta 0:04:17     |███▍                            | 213.0 MB 4.1 MB/s eta 0:07:08     |█████▍                          | 334.8 MB 4.1 MB/s eta 0:06:45     |█████▍                          | 337.2 MB 5.6 MB/s eta 0:04:56     |█████▋                          | 350.2 MB 6.8 MB/s eta 0:04:01     |█████▉                          | 361.1 MB 6.3 MB/s eta 0:04:20     |█████▉                          | 361.6 MB 6.3 MB/s eta 0:04:19     |██████▎                         | 388.8 MB 6.8 MB/s eta 0:03:55     |██████▋                         | 409.5 MB 3.0 MB/s eta 0:08:47     |█████████▍                      | 580.6 MB 2.9 MB/s eta 0:08:10     |█████████▌                      | 588.6 MB 473 kB/s eta 0:49:05     |█████████▌                      | 589.9 MB 473 kB/s eta 0:49:02     |██████████▎                     | 639.2 MB 7.4 MB/s eta 0:03:02     |██████████▊                     | 662.4 MB 6.8 MB/s eta 0:03:15     |███████████▍                    | 707.5 MB 5.1 MB/s eta 0:04:12     |███████████▍                    | 708.3 MB 5.4 MB/s eta 0:03:55     |███████████▉                    | 731.1 MB 3.2 MB/s eta 0:06:32     |███████████▉                    | 734.5 MB 2.5 MB/s eta 0:08:26     |████████████                    | 738.0 MB 2.5 MB/s eta 0:08:24     |████████████▌                   | 775.5 MB 6.1 MB/s eta 0:03:20     |██████████████▉                 | 916.2 MB 4.3 MB/s eta 0:04:07     |██████████████▉                 | 921.6 MB 4.0 MB/s eta 0:04:25     |████████████████▋               | 1028.1 MB 3.3 MB/s eta 0:04:52     |████████████████▊               | 1032.5 MB 6.5 MB/s eta 0:02:27     |█████████████████               | 1052.7 MB 1.3 MB/s eta 0:11:57     |█████████████████               | 1053.6 MB 1.3 MB/s eta 0:11:56     |█████████████████               | 1058.8 MB 2.8 MB/s eta 0:05:35     |█████████████████▉              | 1107.6 MB 5.8 MB/s eta 0:02:30     |██████████████████▉             | 1167.5 MB 15.2 MB/s eta 0:00:54     |██████████████████▉             | 1169.4 MB 8.4 MB/s eta 0:01:37     |█████████████████████▍          | 1322.3 MB 7.9 MB/s eta 0:01:24     |██████████████████████▊         | 1410.7 MB 4.5 MB/s eta 0:02:09     |███████████████████████▏        | 1433.9 MB 2.2 MB/s eta 0:04:09     |███████████████████████▊        | 1466.8 MB 5.0 MB/s eta 0:01:44     |████████████████████████▌       | 1519.1 MB 6.9 MB/s eta 0:01:08     |█████████████████████████▍      | 1576.1 MB 3.7 MB/s eta 0:01:51     |█████████████████████████▌      | 1576.8 MB 3.7 MB/s eta 0:01:51     |██████████████████████████▉     | 1661.9 MB 2.9 MB/s eta 0:01:52"
+      "Requirement already satisfied: torch==1.8.0+cu111 in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (1.8.0+cu111)\n",
+      "Requirement already satisfied: typing-extensions in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torch==1.8.0+cu111) (4.2.0)\n",
+      "Requirement already satisfied: numpy in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torch==1.8.0+cu111) (1.22.3)\n",
+      "Requirement already satisfied: torchtext==0.9.0 in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (0.9.0)\n",
+      "Requirement already satisfied: numpy in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torchtext==0.9.0) (1.22.3)\n",
+      "Requirement already satisfied: torch==1.8.0 in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torchtext==0.9.0) (1.8.0+cu111)\n",
+      "Requirement already satisfied: requests in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torchtext==0.9.0) (2.27.1)\n",
+      "Requirement already satisfied: tqdm in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torchtext==0.9.0) (4.63.1)\n",
+      "Requirement already satisfied: typing-extensions in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from torch==1.8.0->torchtext==0.9.0) (4.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from requests->torchtext==0.9.0) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from requests->torchtext==0.9.0) (2.0.12)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from requests->torchtext==0.9.0) (1.26.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages (from requests->torchtext==0.9.0) (2021.10.8)\n"
      ]
     }
    ],
@@ -619,20 +631,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 162,
    "metadata": {
     "id": "RfZ6SL-Q1Kwd"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -662,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 164,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -704,16 +707,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-06-20 02:52:32--  https://raw.githubusercontent.com/dccuchile/CC6205/master/assignments/star_wars_chatbot.json\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "--2022-06-20 22:27:21--  https://raw.githubusercontent.com/dccuchile/CC6205/master/assignments/star_wars_chatbot.json\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 14469 (14K) [text/plain]\n",
-      "Saving to: ‘star_wars_chatbot.json’\n",
+      "Saving to: ‘star_wars_chatbot.json.1’\n",
       "\n",
-      "star_wars_chatbot.j 100%[===================>]  14,13K  --.-KB/s    in 0,005s  \n",
+      "star_wars_chatbot.j 100%[===================>]  14,13K  --.-KB/s    in 0,003s  \n",
       "\n",
-      "2022-06-20 02:52:32 (2,65 MB/s) - ‘star_wars_chatbot.json’ saved [14469/14469]\n",
+      "2022-06-20 22:27:21 (4,14 MB/s) - ‘star_wars_chatbot.json.1’ saved [14469/14469]\n",
       "\n"
      ]
     }
@@ -725,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 165,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -738,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "97lines [00:00, 42583.99lines/s]\n"
+      "97lines [00:00, 83989.99lines/s]\n"
      ]
     }
    ],
@@ -769,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 262,
    "metadata": {
     "id": "n-vQ24tMJG5H"
    },
@@ -831,7 +834,7 @@
     "        h = h.mean(dim=2)\n",
     "\n",
     "        # (N x num_classes)\n",
-    "        return self.fc(h)\n",
+    "        return h\n",
     "      else:\n",
     "        h = h.mean(dim=1)\n",
     "        return self.fc(h)"
@@ -848,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 263,
    "metadata": {
     "id": "K1AZpXc7JxTa"
    },
@@ -875,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 266,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -948,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 267,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -964,7 +967,7 @@
        "'funny'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 268,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1045,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 269,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1059,30 +1062,14 @@
      "output_type": "stream",
      "text": [
       "Let's chat! (type 'finish_chat' to finish the chat)\n",
-      "You: Do you know any joke?\n",
-      "GA-97: What do you need to reroute droids? R2-Detour.\n",
-      "You: Do you know any joke?\n",
-      "GA-97: What’s Yoda’s advice for going to the bathroom? Doo-doo or doo-doo-not-do.\n",
-      "You: Do you know any joke?\n",
-      "GA-97: Which Jedi became a rock star? Bon Jovi-Wan Kenobi.\n",
-      "You: Do you know any joke?\n",
-      "GA-97: What’s Yoda’s advice for going to the bathroom? Doo-doo or doo-doo-not-do.\n",
-      "You: Do you know any joke?\n",
-      "GA-97: How does Darth Vader like his toast? On the Dark Side.\n",
-      "You: Do you know any joke?\n",
-      "GA-97: What did Han Solo say to the waiter who recommended the haddock?, Never sell me the cods!\n",
-      "You: Do you know any joke?\n",
-      "GA-97: Why was the droid angry? Because people kept pushing its buttons.\n",
+      "You: Hi\n",
+      "GA-97: Hello Dear\n",
       "You: Do you know any joke?\n",
       "GA-97: Which program do Jedi use to open PDF files? Adobe-Wan Kenobi\n",
-      "You: Do you know any joke?\n",
-      "GA-97: What do you call a rebel princess who only shops at Whole Foods? Leia Organic.\n",
-      "You: Do you know any joke?\n",
-      "GA-97: Which Jedi became a rock star? Bon Jovi-Wan Kenobi.\n",
-      "You: Do you know any joke?\n",
+      "You: can you tell me a joke?\n",
       "GA-97: Which program do Jedi use to open PDF files? Adobe-Wan Kenobi\n",
-      "You: Do you know any joke?\n",
-      "GA-97: What did Han Solo say to the waiter who recommended the haddock?, Never sell me the cods!\n",
+      "You: exit\n",
+      "GA-97: Here is top 10 bounti hounter you are looking for: Jango Fett, Boba Fett, Cad Bane, Durge, Embo, Dengar, Black Krrsantan, IG-88, Aurra Sing, Sabine Wren.\n",
       "You: finish_chat\n"
      ]
     }
@@ -1113,9 +1100,15 @@
     "print(\"Let's chat! (type 'finish_chat' to finish the chat)\")\n",
     "while True:\n",
     "    q_text = input(\"You: \")\n",
-    "    q_text = q_text\n",
-    "    if q_text == 'finish_chat':\n",
-    "        break\n",
+    "    if USE_CNN:\n",
+    "        q_text = \"'\"+q_text+\"'\"\n",
+    "        finish_chat = \"finish_chat\"\n",
+    "        if q_text == \"'\"+finish_chat+\"'\":\n",
+    "            break\n",
+    "    else:\n",
+    "        q_text = q_text\n",
+    "        if q_text == 'finish_chat':\n",
+    "            break\n",
     "\n",
     "    X = torch.tensor([vocab.stoi[t] for t in tokenizer(q_text)]).to(device)\n",
     "    output = model(X, torch.tensor([0], dtype=torch.long).to(device))\n",
@@ -1146,7 +1139,7 @@
     "id": "fdFV63WVUX32"
    },
    "source": [
-    "``Comente los resultados aquí``"
+    "Cualitativamente, es decir, probando el chat y observando los resultados, se tiene que la red feed forward obtiene mejores resultados que el modelo CNN. En particular, la red feed forward, la mayor parte de las veces, responde correctamente a los textos `Hi`, `can you tell me a joke` y `Do you know a joke`. Por el otro lado, la CNN responde correctamente pocas veces al texto `Hi` y responde, aproximadamente, la mitad de las veces correctamente a los textos `can you tell me a joke` y `Do you know a joke`."
    ]
   }
  ],
