Fix text in last answer

--- a/tareas/04/Tarea_4.ipynb
+++ b/tareas/04/Tarea_4.ipynb
@@ -631,11 +631,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "metadata": {
     "id": "RfZ6SL-Q1Kwd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -694,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -707,16 +716,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-06-20 22:27:21--  https://raw.githubusercontent.com/dccuchile/CC6205/master/assignments/star_wars_chatbot.json\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
+      "--2022-06-21 00:45:52--  https://raw.githubusercontent.com/dccuchile/CC6205/master/assignments/star_wars_chatbot.json\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.109.133, ...\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 14469 (14K) [text/plain]\n",
-      "Saving to: ‘star_wars_chatbot.json.1’\n",
+      "Saving to: ‘star_wars_chatbot.json’\n",
       "\n",
-      "star_wars_chatbot.j 100%[===================>]  14,13K  --.-KB/s    in 0,003s  \n",
+      "star_wars_chatbot.j 100%[===================>]  14,13K  --.-KB/s    in 0,007s  \n",
       "\n",
-      "2022-06-20 22:27:21 (4,14 MB/s) - ‘star_wars_chatbot.json.1’ saved [14469/14469]\n",
+      "2022-06-21 00:45:52 (1,94 MB/s) - ‘star_wars_chatbot.json’ saved [14469/14469]\n",
       "\n"
      ]
     }
@@ -728,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -741,7 +750,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "97lines [00:00, 83989.99lines/s]\n"
+      "97lines [00:00, 104186.30lines/s]\n"
      ]
     }
    ],
@@ -772,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 29,
    "metadata": {
     "id": "n-vQ24tMJG5H"
    },
@@ -837,7 +846,7 @@
     "        return h\n",
     "      else:\n",
     "        h = h.mean(dim=1)\n",
-    "        return self.fc(h)"
+    "        return self.fc(h)\n"
    ]
   },
   {
@@ -851,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 30,
    "metadata": {
     "id": "K1AZpXc7JxTa"
    },
@@ -878,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -893,7 +902,7 @@
      "text": [
       "GPU is avaible: cpu\n",
       "train: 97 elements\n",
-      "Epoch: 1000 \t iter-Loss: 0.001final loss: 0.0012\n"
+      "Epoch: 1000 \t iter-Loss: 0.001final loss: 0.0007\n"
      ]
     }
    ],
@@ -951,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -967,7 +976,7 @@
        "'funny'"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1048,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1063,13 +1072,13 @@
      "text": [
       "Let's chat! (type 'finish_chat' to finish the chat)\n",
       "You: Hi\n",
-      "GA-97: Hello Dear\n",
-      "You: Do you know any joke?\n",
-      "GA-97: Which program do Jedi use to open PDF files? Adobe-Wan Kenobi\n",
+      "GA-97: Yes, I am here.\n",
       "You: can you tell me a joke?\n",
-      "GA-97: Which program do Jedi use to open PDF files? Adobe-Wan Kenobi\n",
-      "You: exit\n",
-      "GA-97: Here is top 10 bounti hounter you are looking for: Jango Fett, Boba Fett, Cad Bane, Durge, Embo, Dengar, Black Krrsantan, IG-88, Aurra Sing, Sabine Wren.\n",
+      "GA-97: What do you need to reroute droids? R2-Detour.\n",
+      "You: Hello\n",
+      "GA-97: Ooooo Hello, looking for someone or something?\n",
+      "You: do you know any joke?\n",
+      "GA-97: What’s Yoda’s advice for going to the bathroom? Doo-doo or doo-doo-not-do.\n",
       "You: finish_chat\n"
      ]
     }
@@ -1139,7 +1148,7 @@
     "id": "fdFV63WVUX32"
    },
    "source": [
-    "Cualitativamente, es decir, probando el chat y observando los resultados, se tiene que la red feed forward obtiene mejores resultados que el modelo CNN. En particular, la red feed forward, la mayor parte de las veces, responde correctamente a los textos `Hi`, `can you tell me a joke` y `Do you know a joke`. Por el otro lado, la CNN responde correctamente pocas veces al texto `Hi` y responde, aproximadamente, la mitad de las veces correctamente a los textos `can you tell me a joke` y `Do you know a joke`."
+    "Cualitativamente, es decir, probando el chat y observando los resultados, se tiene que la red feed forward obtiene mejores resultados que el modelo CNN. En particular, la red feed forward, la mayor parte de las veces, responde correctamente a los textos `Hi`, `can you tell me a joke` y `Do you know a joke`. Por el otro lado, la CNN responde correctamente pocas veces al texto `Hi` y responde, aproximadamente, un poco más de la mitad de las veces responder correctamente a los textos `can you tell me a joke` y `Do you know a joke`."
    ]
   }
  ],
